Revision history for Cv.pm

0.24 - 2012-02-02
     * added init for Cv::Seq::Point->new
     * reduced constraints in the object inheritance

0.23 - 2012-01-31
     * fixed endRow of cvGetRows
     * fixed cvSolve, cvSolveCubic, cvMinS, Cv::Arr::Min, Cv::Arr::Max
     * fixed dst of DFT
     * added Cv::More qw(boxhappy) for before OpenCV-2.2.0
     * merged Cv::Merge and Cv::Arr::Merge
     * removed CvCircle

0.22 - 2012-01-21
     * added More.pod
     * fixed pod error
     * fixed fallback code for making Constant.pm (use version.pm).
     * fixed Cmp value double (not a cvScalar)
     * fixed GetRawData if CvMatND used
     * fixed dst CV_8UC1 for inRange*
     * fixed type conversion warnings in typemap
     * redefined Perl_croak in Carp::croak to get better location of the error
     * added test for verifying error location
     * simplicity. "use Cv qw(:std)" => "use Cv qw(:all)"

0.21 - 2012-12-27
     * fixed compile error on cygwin (can't handle pp-stmt in typemap?)
     * fixed AUTOLOAD to keep $@
     * mearged Highgui ...
     * fixed cvError if CC=cc
     * fixed cvError on OpenCV-1.1
     * fixed some skipped tests (cygwin, OpenCv-1.1)

0.19a - 2012-12-12
     * fixed t/4CvVideoWriter.t

0.19 - 2012-12-12
     * fixed croak error location in AUTOLOAD relaying at first
     * removed Cv::alias
     * removed global data in Cv.xs
     * rewrote cv::error to use Perl error handler $Cv::ERROR
     * rewrote other callbacks
     * separated Highgui
     * s/:nomore/-more/
     * fixed // op for perl-5.8.9
     * rewrote CV_FOURCC
     * MYEXTLIB is no longer needed
     * fixed ContourArea's retval

0.18 - 2012-11-28
     * fixed tools/dumpconst.pl
     * fixed lib/Cv/Seq/*pm to clear stmt "no warnings"
     * added some t/*t
     * rewrote typemap again
     * fixed croak error location in AUTOLOAD relaying
     * added initializer for Cv::MatND::new
     * fixed WarpAffine, WarpPerspective
     * added m_get, Transform

0.17 - 2012-11-13